--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,4 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 set -g default-terminal "screen-256color"
-set -g mode-mouse on
-set -g mouse-resize pane on
-set -g mouse-select pane on
-set -g mouse-select window on
+set-option -g pane-active-border-fg red
