--- a/tmux.conf
+++ b/tmux.conf
@@ -2,4 +2,28 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 set -g default-terminal "screen-256color"
-set-option -g pane-active-border-fg red
+#set-option -g pane-active-border-fg red
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+ set-option -g message-bg colour235 #base02
+ set-option -g message-fg colour166 #orange
+
+ # pane number display
+ set-option -g display-panes-active-colour colour33 #blue
+ set-option -g display-panes-colour colour166 #orange
+ # clock
+ set-window-option -g clock-mode-colour green #green
