--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,12 @@ bind ` send-prefix
 set -g default-terminal "screen-256color"
 #set-option -g pane-active-border-fg red
 
+# Mouse mode
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
@@ -23,7 +29,8 @@ set-option -g pane-active-border-fg colour240 #base01
  set-option -g message-fg colour166 #orange
 
  # pane number display
- set-option -g display-panes-active-colour colour33 #blue
- set-option -g display-panes-colour colour166 #orange
+# set-option -g display-panes-active-colour colour33 #blue
+# set-option -g display-panes-colour colour166 #orange
+
  # clock
  set-window-option -g clock-mode-colour green #green
