--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
+# bind prefix to ctrl-a
 unbind C-b
-set -g prefix `
-bind ` send-prefix
+set -g prefix C-a
+bind C-a send-prefix
+
 #set -g default-terminal "screen-256color"
 #set-option -g pane-active-border-fg red
 
