--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,28 @@
- bind prefix to ctrl-a
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# bind prefix to ctrl-a
+ unbind C-b
+ set -g prefix C-a
+ bind C-a send-prefix
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+#resize panes
+
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+
+setw -g mode-keys vi
+setw -g mode-mouse on
+setw -g monitor-activity on
+
 
 #set -g default-terminal "screen-256color"
 #set-option -g pane-active-border-fg red
@@ -12,6 +33,25 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 ttymouse=xterm2
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 
 #### COLOUR (Solarized dark)
 #
