mouse working in iterm - terminal doesnt seem to work with mouse for some reason...

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,90 +1,72 @@
-# bind prefix to ctrl-a
- unbind C-b
- set -g prefix C-a
- bind C-a send-prefix
-#
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-#resize panes
+#Use UTF8
+set -g utf8
+set-window-option -g utf8 on
 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+# Set the correct term
+set -g default-terminal "screen-256color"
 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
+# Unbind default Ctrl-b
+unbind C-b
 
+# Set prefix to Ctrl-a
+set -g prefix C-a
 
-setw -g mode-keys vi
-setw -g mode-mouse on
-setw -g monitor-activity on
+# Start window numbering at 1
+set -g base-index 1
 
+# Start pane numbering at 1
+set -g pane-base-index 1
 
-#set -g default-terminal "screen-256color"
-#set-option -g pane-active-border-fg red
+# Turn on window titles
+set -g set-titles on
+
+# Specify what titles should look like
+set -g set-titles-string '#I | #W'
+
+# Set utf-8 for the status bar
+set -g status-utf8 on
+
+# Set update frequencey (default 15 seconds)
+set -g status-interval 5
+
+# Ideally the status-position will be at the top but it's only supported >1.8
+set -g status-position top 
+
+# Automagically rename windows depending on what's running
+set -g automatic-rename on
+
+# Don't wait for repeated commands
+set -g repeat-time 0
+
+# Status-left content
+set -g status-left ''
+
+# Status-right content
+set -g @online_icon "✓"
+set -g @offline_icon "✗"
+set -g status-right '%H:%M %d-%b-%y | #{online_status}'
+
+# 
+set -g focus-events on
+
+# Prevent any delay for the ESC key
+set -s escape-time 0
+
+# Easier refreshing of tmux
+bind r source-file ~/.tmux.conf
 
 # Mouse mode
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-ttymouse=xterm2
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
-
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-
-#### COLOUR (Solarized dark)
-#
-## default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
-
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-
+# Theme
+set -g status-bg colour235
+set -g status-fg white
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
