--- a/tmux.conf
+++ b/tmux.conf
@@ -66,7 +66,11 @@ set -g status-bg colour235
 set -g status-fg white
 set -g pane-border-fg colour235
 set -g pane-border-bg black
+
+# Active pane 
 set -g pane-active-border-fg green
-set -g pane-active-border-bg black
+set -g pane-active-border-bg red
+set-option -g pane-active-border-fg blue
+
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
