--- a/tmux.conf
+++ b/tmux.conf
@@ -68,9 +68,9 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 
 # Active pane 
-set -g pane-active-border-fg green
+set -g pane-active-border-fg red
 set -g pane-active-border-bg red
-set-option -g pane-active-border-fg blue
+#set-option -g pane-active-border-fg blue
 
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
