--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g utf8
 set-window-option -g utf8 on
 
 # Set the correct term
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 # Unbind default Ctrl-b
 unbind C-b
