--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ set -g automatic-rename on
 set -g repeat-time 0
 
 # Status-left content
-set -g status-left ''
+set -g status-left '#S   '
 
 # Status-right content
 set -g @online_icon "✓"
@@ -75,4 +75,7 @@ set -g pane-active-border-bg red
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
 
-
+#open in same
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
