--- a/tmux.conf
+++ b/tmux.conf
@@ -69,7 +69,7 @@ set -g pane-border-bg black
 
 # Active pane 
 set -g pane-active-border-fg red
-set -g pane-active-border-bg red
+#set -g pane-active-border-bg red
 #set-option -g pane-active-border-fg blue
 
 set-window-option -g window-status-current-fg black
