--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,9 @@ unbind C-b
 # Set prefix to Ctrl-a
 set -g prefix C-a
 
+# Make sure you can move the cursor to the start of the line
+bind a send-prefix
+
 # Start window numbering at 1
 set -g base-index 1
 
