about to merge back in and try new color scheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,12 +39,14 @@ set -g automatic-rename on
 set -g repeat-time 0
 
 # Status-left content
-set -g status-left '#S   '
+#set -g status-left '#S   '
+set -g status-left ''
 
 # Status-right content
 set -g @online_icon "✓"
 set -g @offline_icon "✗"
-set -g status-right '%H:%M %d-%b-%y | #{online_status}'
+set -g status-right ''
+#set -g status-right '%H:%M %d-%b-%y | #{online_status}'
 
 # 
 set -g focus-events on
