xoria installed not sure if it is too washed out

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set-window-option -g utf8 on
 
 # Set the correct term
 #set -g default-terminal "screen-256color"
+term screen-256color
 
 # Unbind default Ctrl-b
 unbind C-b
@@ -30,7 +31,7 @@ set -g status-utf8 on
 set -g status-interval 5
 
 # Ideally the status-position will be at the top but it's only supported >1.8
-set -g status-position top 
+set -g status-position top
 
 # Automagically rename windows depending on what's running
 set -g automatic-rename on
@@ -48,7 +49,7 @@ set -g @offline_icon "✗"
 set -g status-right ''
 #set -g status-right '%H:%M %d-%b-%y | #{online_status}'
 
-# 
+#
 set -g focus-events on
 
 # Prevent any delay for the ESC key
@@ -69,7 +70,7 @@ set -g status-fg white
 set -g pane-border-fg colour235
 set -g pane-border-bg black
 
-# Active pane 
+# Active pane
 set -g pane-active-border-fg red
 #set -g pane-active-border-bg red
 #set-option -g pane-active-border-fg blue
