hid status bar in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,8 @@ set -g set-titles on
 # Specify what titles should look like
 set -g set-titles-string '#I | #W'
 
+set -g status off
+
 # Set utf-8 for the status bar
 set -g status-utf8 on
 
