--- a/tmux.conf
+++ b/tmux.conf
@@ -61,11 +61,7 @@ set -s escape-time 0
 bind r source-file ~/.tmux.conf
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
+set-option -g mouse on
 # Theme
 set -g status-bg colour235
 set -g status-fg white
