--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,14 @@
 {
-    "parser": "babel-eslint",
-    "env": {
-        "browser": true,
-        "node": true
-    },
-    "settings": {
-        "ecmascript": 6
-    },
+    "extends": "airbnb/legacy",
     "rules": {
-        "strict": 0 // you can add more rules if you want
+        "strict": [2, "global"],
+        "no-multi-spaces": 0,
+        "no-use-before-define": 0,
+        "no-console": 0,
+        "padded-blocks": 0,
+        "no-else-return": 0
+    },
+    "env": {
+        "node": true
     }
 }
