--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,16 @@
 {
-    "extends": "airbnb/legacy",
-    "rules": {
-        "strict": [2, "global"],
-        "no-multi-spaces": 0,
-        "no-use-before-define": 0,
-        "no-console": 0,
-        "padded-blocks": 0,
-        "no-else-return": 0
+    "parserOptions": {
+        "ecmaVersion": 6,
+            "sourceType": "module",
+            "ecmaFeatures": {
+                "jsx": true
+            }
     },
-    "env": {
-        "node": true
-    }
+        "rules": {
+            "semi": 2
+        },
+        "env":{
+            "node": true,
+            "es6": true
+        }
 }
