made tmux leader back tick

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,11 +6,9 @@ set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 #term screen-256color
 
-# Unbind default Ctrl-b
 unbind C-b
-
-# Set prefix to Ctrl-a
-set -g prefix C-a
+set -g prefix `
+bind-key ` send-prefix
 
 # Start window numbering at 1
 set -g base-index 1
