mapped backslash for navigating panes in vim on hjkl keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,12 @@ set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 #term screen-256color
 
+# Pane navigation use standard vim keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
