added tmux tab color conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,6 @@ set-window-option -g utf8 on
 # Set the correct term
 set -g default-terminal "screen-256color"
 #term screen-256color
-
 # Pane navigation use standard vim keys
 bind h select-pane -L
 bind j select-pane -D
@@ -98,7 +97,7 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg white #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
