tmux conf updated to remove deprecated settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 #Use UTF8
-set -g utf8
-set-window-option -g utf8 on
+#set -g utf8
+#set-window-option -g utf8 on
 
 # Set the correct term
 set -g default-terminal "screen-256color"
@@ -30,7 +30,7 @@ set -g set-titles-string '#I | #W'
 set -g status on
 
 # Set utf-8 for the status bar
-set -g status-utf8 on
+#set -g status-utf8 on
 
 # Set update frequencey (default 15 seconds)
 set -g status-interval 5
