--- a/tmux.conf
+++ b/tmux.conf
@@ -97,9 +97,9 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg white #orange
+set-window-option -g window-status-current-fg colour213 #orange
 set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+#set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
