reset default netrw listing style

--- a/tmux.conf
+++ b/tmux.conf
@@ -112,6 +112,11 @@ set-option -g message-fg colour166 #orange
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
+#
+# border colours
+set -g pane-border-style fg=magenta
+set -g pane-active-border-style fg=magenta
+set -g pane-active-border-style bg=default
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
